Fix spacing for Content Display block in Grid and List views
#483

--- a/src/assets/scss/recent-posts.scss
+++ b/src/assets/scss/recent-posts.scss
@@ -61,7 +61,6 @@
   // Generic
   .advgb-recent-post {
     position: relative;
-    padding: 5px;
 
     .advgb-post-thumbnail {
 
@@ -207,12 +206,11 @@
     grid-template-columns: 30% 1fr;
     grid-gap: 20px;
     margin-bottom: 20px;
-    padding-bottom: 5px;
+    padding-bottom: 20px;
     display: -ms-flexbox;
 
     .advgb-post-thumbnail {
       flex-basis: 30%;
-      padding: 5px;
     }
 
     .advgb-post-wrapper {
